--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="showcase">
-        <img src="./images/Group 3.svg" alt="">
+        <!-- <img src="./images/Group 3.svg" alt=""> -->
 
     </div>
+    
+    
 </body>
 </html>
